@@ -137,7 +137,7 @@ class DiscussThreadNewRepliesToPostsController extends DiscussController {
     public function getActionButtons() {
         $actionButtons = array();
         if ($this->discuss->user->isLoggedIn) {
-            $actionButtons[] = array('url' => $this->discuss->request->makeUrl('thread/new_replies_to_posts',array('read' => 1)), 'text' => $this->modx->lexicon('discuss.mark_all_as_read'));
+            $actionButtons[] = array('url' => $this->discuss->request->makeUrl('thread/new_replies_to_posts',array('read' => 1)), 'text' => $this->modx->lexicon('discuss.mark_all_as_read'), 'cls' => 'dis-action-mark_all_as_read');
         }
         $this->setPlaceholder('actionbuttons',$this->discuss->buildActionButtons($actionButtons,'dis-action-btns right'));
     }
