@@ -1,5 +1,6 @@
 Changelog for Discuss.
 
+- Ensure action buttons have specific and consistent class names for styling (dis-action-name_of_action)
 - Make length of post excerpt configurable.
 - Fix bug in mgr processor board/getnodes causing issues in CMP.
 - Add ability to discussLogin post login hook to redirect back to prior location based on sessionPlace
